ran new scope changes